@@ -16,6 +16,9 @@ CHANGES
 - firebird has supports_sane_rowcount and supports_sane_multi_rowcount set 
   to False due to ticket #370 (right way).
 
+- fixed three- and multi-level select and deferred inheritance
+  loading (i.e. abc inheritance with no select_table), [ticket:795]
+
 0.4.0beta6
 ----------
 
